--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/eslint-parser": "^7.24.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
